added keyboard events

--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,11 @@ body {
     background-image: url('images/kick.png');
 }
 
+.pressed {
+    box-shadow: 0 3px 4px 0 #DBEDF3;
+    opacity: 0.5;
+}
+
 .footer {
     font-family: 'Arvo', serif;
     color: #fff;
